Fix for jumping entry page

--- a/src/layout/styles/SideBarLayout.scss
+++ b/src/layout/styles/SideBarLayout.scss
@@ -4,7 +4,7 @@
   padding-left: 0.5rem;
   display: grid;
   grid-gap: $gutter-size;
-  grid-template-columns: 1fr 6fr;
+  grid-template-columns: 16.6vw 83.4vw;
   grid-template-rows: auto 75vh;
   grid-template-areas: 'title title' 'sidebar content';
   &--inverted {
